<resources>
    <string name="app_name">GPSPrecision</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_handler">Handler</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_network">NetworkActivity</string>
    <string name="title_activity_maps">Dokładność usług geolokalizacyjnych</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="action_start_test">Przeprowadź badanie</string>
    <string name="action_options">Opcje</string>

    <string name="submenu_close_app">Zamknij aplikację</string>
    <string name="submenu_clear_map">Wyczyść mapę</string>
    <string name="submenu_show_all_markers">Pokaż wszystkie punkty</string>
    <string name="submenu_save_results">Zapisz wyniki do pliku</string>
    <string name="submenu_end_test">Zakończ test</string>
    <string name="submenu_start_test">Wygeneruj punkty do testu</string>


</resources>
