<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.lukasz.gpsprecision.MapsActivity">

    <item
        android:id="@+id/action_menu"
        android:title="Menu"
        app:showAsAction="always"
        android:icon="@drawable/ic_menu_white_24dp"
        android:orderInCategory="1">
        <menu xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools">

        <item
            android:id="@+id/action_start_test"
            android:orderInCategory="1"
            android:title="Badanie dokładności"
            android:actionProviderClass="android.widget.ShareActionProvider"
            app:showAsAction="never"
            android:icon="@drawable/ic_create_white_36dp">
            <menu xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools">
                <item
                    android:id="@+id/startTest"
                    android:title="@string/submenu_start_test" />
                <item
                    android:id="@+id/saveResults"
                    android:title="@string/submenu_save_results" />
            </menu>
        </item>
        <item
            android:id="@+id/action_options"
            android:orderInCategory="2"
            android:title="Opcje"
            app:showAsAction="never"
            android:icon="@android:drawable/ic_menu_preferences">
            <menu>
                <item
                    android:id="@+id/showAllMarkers"
                    android:title="@string/submenu_show_all_markers" />
                <item
                    android:id="@+id/clearMap"
                    android:title="@string/submenu_clear_map" />
                <item
                    android:id="@+id/closeApp"
                    android:title="@string/submenu_close_app" />
            </menu>
        </item>
        </menu>
    </item>

</menu>
